<resources>
    <string name="app_name">OurMaxTools</string>
    <string name="menu1">Led</string>
    <string name="menu2">二维码</string>
    <string name="menu3">分贝仪</string>
    <string name="menu4">水平仪</string>
    <string name="menu5">指南针</string>
    <string name="menu6">手电筒</string>
    <string name="menu7">镜子</string>
    <string name="menu8">放大镜</string>
    <string name="menu9">刻度尺</string>
    <string name="menu10">量角器</string>
    <string name="menu11">单位换算</string>
    <string name="menu12">尺码表</string>
    <string name="level_title">水平仪</string>
    <string name="vertical">垂直</string>
    <string name="horizontal">水平</string>
    <!-- compass -->
    <string name="location_north">%s N</string>
    <string name="location_south">%s S</string>
    <string name="location_east">%s E</string>
    <string name="location_west">%s W</string>
    <string name="compass_title">Compass</string>
    <string name="compass_north">North</string>
    <string name="compass_east">East</string>
    <string name="compass_south">South</string>
    <string name="compass_west">West</string>
    <string name="compass_northeast">Northeast</string>
    <string name="compass_southeast">Southeast</string>
    <string name="compass_northwest">Northwest</string>
    <string name="compass_southwest">Southwest</string>
    <string name="compass_north_short">n</string>
    <string name="compass_east_short">e</string>
    <string name="compass_south_short">s</string>
    <string name="compass_west_short">w</string>
    <string name="compass_northeast_short">ne</string>
    <string name="compass_southeast_short">se</string>
    <string name="compass_northwest_short">nw</string>
    <string name="compass_southwest_short">sw</string>
    <string name="compass_cannot_get_location">Cannot get your location</string>
    <string name="compass_cannot_get_sensor">Cannot get any sensor</string>
    <string name="compass_exit_toast">Click again exit to application</string>
    <string name="compass_text_exit">Exit</string>
    <string name="compass_text_calibration">About calibration</string>
    <string name="compass_text_calibration_title">Calibration</string>
    <string name="compass_text_calibration_help">to calibrate,please move phone along \'8\' route with its front face up and towards yourself respectively</string>
    <string name="compass_text_ok">Ok</string>
    <string name="compass_north_latitude">North latitude</string>
    <string name="compass_east_longitude">East longitude</string>
    <string name="compass_degree">°</string>
    <string name="compass_minute">\'</string>
    <string name="compass_second">\'\'</string>
    <string name="compass_error">err</string>
    <string name="compass_isfirst_use">iscompassfirstopen</string>
    <string name="compass_click_note">please click \'8\' button</string>
    <string name="long_click_toast">" shortcut is created!"</string>
    <string name="sound_metel_title">SoundMetel</string>


    <!-- 尺寸 -->
    <string name="size_title">Size</string>
    <string name="size_tool_desc">The size may differ according to brand and product. Please refer to information for respective item for accurate size.</string>
    <string name="size_fragment_clothes">clothes</string>
    <string name="size_fragment_hat">hat</string>
    <string name="size_fragment_ring">ring</string>
    <string name="size_fragment_shoes">shoes</string>
    <string name="size_fragment_underwear">underwear</string>
    <string name="size_fragment_clothes_jeans">Jeans</string>
    <string name="size_tools_list_man">man</string>
    <string name="size_tools_list_woman">woman</string>
    <string name="size_fragment_clothes_jeans_header_th1">Size(inch)</string>
    <string name="size_fragment_clothes_jeans_header_th2">Size(cm)</string>
    <string name="size_fragment_clothes_header_th1">US</string>
    <string name="size_fragment_clothes_header_th2">UK</string>
    <string name="size_fragment_clothes_header_th3">France</string>
    <string name="size_fragment_clothes_header_th4">Italy</string>
    <string name="size_fragment_clothes_header_th5">Korea</string>
    <string name="size_fragment_clothes_header_th6">Japan</string>
    <string name="size_fragment_shoes_header_th1">US</string>
    <string name="size_fragment_shoes_header_th2">UK</string>
    <string name="size_fragment_shoes_header_th3">EU</string>
    <string name="size_fragment_shoes_header_th4">Korea</string>
    <string name="size_fragment_shoes_header_th5">Japan</string>
    <string name="size_fragment_shoes_header_th6">Size(cm)</string>
    <string name="size_fragment_hat_header_th1">US</string>
    <string name="size_fragment_hat_header_th2">UK</string>
    <string name="size_fragment_hat_header_th3">Japan</string>
    <string name="size_fragment_hat_header_th4">Size(cm)</string>
    <string name="size_fragment_hat_header_th5">Size(inch)</string>
    <string name="size_fragment_ring_header_th1">US</string>
    <string name="size_fragment_ring_header_th2">UK</string>
    <string name="size_fragment_ring_header_th3">EU/KR/JP</string>
    <string name="size_fragment_ring_header_th4">circumfer-\nence(mm)</string>
    <string name="size_fragment_ring_header_th5">diameter\n(mm)</string>
    <string name="size_fragment_underwear_header_th1">US</string>
    <string name="size_fragment_underwear_header_th2">France</string>
    <string name="size_fragment_underwear_header_th3">EU/KR</string>
    <string name="size_fragment_underwear_header_th4">Japan</string>
    <string name="size_fragment_underwear_header_th5">Top/Under\n(cm)</string>
    <!-- add QRCode -->
    <string name="Founder">Founder</string>
    <string name="exitTitle">Exit</string>
    <string name="exitConfirmation">Are you sure to exit the app?</string>
    <string name="title_activity_encode_main">QR code</string>
    <string name="typeOfText">Text</string>
    <string name="typeOfPhoneNum">Phone Number</string>
    <string name="typeOfContact">Contact</string>
    <string name="typeOfUrl">Url</string>
    <string name="typeOfSms">SMS</string>
    <string name="typeOfEmail">Email</string>
    <string name="chooseType">Picktype</string>
    <string name="inputLengthWarning">The input is too long</string>
    <string name="inputWarningOfEmpty">The input is empty</string>
    <string name="title">Title</string>
    <string name="inputTextHint">The max length is 200 chars</string>
    <string name="inputPhoneNumHint">The max length is 18 chars</string>
    <string name="smsNumViewIntro">Number</string>
    <string name="inputSmsNumHint">The max length is 18 chars</string>
    <string name="smsContentViewIntro">Content</string>
    <string name="inputSmsContentHint">The max length is 200 chars</string>
    <string name="contactName">Name</string>
    <string name="inputContactNameHint">The max length is 10 chars</string>
    <string name="contactCompany">Company</string>
    <string name="inputContactOrgHint">The max length is 20 chars</string>
    <string name="contactPhone">Phone</string>
    <string name="inputContactNumHint">The max length is 18 chars</string>
    <string name="contactEmail">Email</string>
    <string name="inputContactEmailHint">The max length is 50 chars</string>
    <string name="contactUrl">Url</string>
    <string name="inputContactUrlHint">The max length is 50 chars</string>
    <string name="contactAddress">Address</string>
    <string name="inputContactAddressHint">The max length is 30 chars</string>
    <string name="contactNote">Note</string>
    <string name="inputUrlHint">http://</string>
    <string name="urlIntro">Input url</string>
    <string name="emailIntro">Input email</string>
    <string name="phoneNumIntro">Input number</string>
    <string name="textIntro">Input text</string>
    <string name="contactsUrl">Url</string>
    <string name="inputcontent">Input</string>
    <string name="qrcode_result">Scan results</string>
    <string name="qrcode_result_copy_hint">The result has been copied to the Clipboard!</string>
    <string name="inputWarningOfInvalidUrl">The format of url is invalid</string>
    <string name="title_activity_encode_text">Text</string>
    <string name="button_ok">OK</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_encode_multi_contacts_error">The Qrcode founder do not support multiple contacts encoding,please choose only one contact to encode</string>
    <string name="contents_text">Plain text</string>
    <string name="inputWarningOfEmailInvalid">The format of email is invalid</string>
    <string name="inputWarningOfNumEmpty">The input  of number is empty</string>
    <string name="inputWarningOfNameEmpty">The input  of name is empty</string>
    <string name="ContentString">Content</string>
    <string name="typeOfNo">No type to pair</string>
    <string name="qrcode_dir_name">HQQRCode</string>
    <string name="qrcode_sec_dir_name">QRCode</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="clearConfirmationTitle">Delete</string>
    <string name="clearConfirmation">Are you sure to delete the selected items?</string>
    <string name="contents_email">Email address</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contactsName">Name</string>
    <string name="contactsEmails">Emails</string>
    <string name="contactsOrg">Org</string>
    <string name="contactsPro">Pro</string>
    <string name="contactsTitle">Title</string>
    <string name="contactsBrithday">Brithday</string>
    <string name="contactsAddress">Address</string>
    <string name="contactsNote">Note</string>
    <string name="contactsNum">Numbers</string>
    <string name="emailAddress">Address</string>
    <string name="emailContent">Contents</string>
    <string name="emailSubject">Subject</string>
    <string name="contactsInstantMessenger">InstantMessenger:</string>
    <string name="uriTitle">Title</string>
    <string name="phoneNumber">Phone number</string>
    <string name="phoneTitle">Title</string>
    <string name="smsNumber">Receiver number</string>
    <string name="smsObject">Object</string>
    <string name="smsContents">Contents</string>
    <string name="smsContent">SMS content</string>
    <string name="decibelinfo10">Sound of breathing</string>
    <string name="decibelinfo20">Leaves rustling sound</string>
    <string name="decibelinfo30">Whispering talks</string>
    <string name="decibelinfo40">Quiet residential area</string>
    <string name="decibelinfo50">Outdoor Air-conditioning Fan</string>
    <string name="decibelinfo60">Usual conversation</string>
    <string name="decibelinfo70">Vacuum cleaner</string>
    <string name="decibelinfo80">Playing piano</string>
    <string name="decibelinfo90">"Dog's barking noise"</string>

<!--扫一扫-->
    <string name="title_activity_scan_qr_code">扫一扫</string>
    <string name="qc_code_close">关闭</string>
    <string name="qr_code_select_picture">照片</string>
    <string name="qr_code_open_flash_light">打开闪光灯</string>
    <string name="qr_code_close_flash_light">关闭闪光灯</string>
    <string name="qr_code_auto_scan_notification">将二维码放入框内，即可自动扫描</string>
    <string name="qr_code_notification">提示</string>
    <string name="qr_code_camera_not_open">您的相机功能好像没有打开哦~去\"设置>隐私>相机\"设置一下吧</string>
    <string name="qr_code_positive_button_know">知道了</string>
    <string name="qr_code_positive_button_confirm">确认</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">没有读出图片中的链接，换张图片试试吧~</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">对不起，无法打开扫出的内容</string>
    <string name="qr_code_camera_not_found">未检测到相机</string>
</resources>
