<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:textSize="10pt"
            android:layout_marginLeft="18dp"
            android:textColor="@color/size_tool_title_text_color"
            android:text="@string/size_fragment_hat_header_th1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:textSize="10pt"
            android:textColor="@color/size_tool_title_text_color"
            android:text="@string/size_fragment_hat_header_th2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:textSize="10pt"
            android:textColor="@color/size_tool_title_text_color"
            android:text="@string/size_fragment_hat_header_th3"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:textSize="10pt"
            android:textColor="@color/size_tool_title_text_color"
            android:text="@string/size_fragment_hat_header_th4"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:textSize="10pt"
            android:textColor="@color/size_tool_title_text_color"
            android:text="@string/size_fragment_hat_header_th5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></LinearLayout>
</LinearLayout>