<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="270dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/lauout_led"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <Button
                android:layout_marginLeft="24dp"
                android:background="@drawable/led_icon"
                android:id="@+id/btn_led"
                android:layout_width="72dp"
                android:layout_height="72dp" />
            <TextView
                android:text="@string/menu1"
                android:layout_marginLeft="40dp"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/lauout_code"
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <Button
                android:layout_marginLeft="24dp"
                android:background="@drawable/ic_menu_code"
                android:id="@+id/btn_code"
                android:layout_width="72dp"
                android:layout_height="72dp" />
            <TextView
                android:text="@string/menu2"
                android:layout_marginLeft="40dp"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/lauout_decibel"
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <Button
                android:layout_marginLeft="24dp"
                android:background="@drawable/ic_menu_decibel"
                android:id="@+id/btn_decibel"
                android:layout_width="72dp"
                android:layout_height="72dp" />
            <TextView
                android:text="@string/menu3"
                android:layout_marginLeft="40dp"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/lauout_level"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <Button
                android:layout_marginLeft="24dp"
                android:background="@drawable/ic_menu_level"
                android:id="@+id/btn_level"
                android:layout_width="72dp"
                android:layout_height="72dp" />
            <TextView
                android:text="@string/menu4"
                android:layout_marginLeft="40dp"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/lauout_compass"
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <Button
                android:layout_marginLeft="24dp"
                android:background="@drawable/ic_menu_compass"
                android:id="@+id/btn_compass"
                android:layout_width="72dp"
                android:layout_height="72dp" />
            <TextView
                android:text="@string/menu5"
                android:layout_marginLeft="40dp"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/lauout_flash"
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <Button
                android:layout_marginLeft="24dp"
                android:background="@drawable/ic_menu_flashlight"
                android:id="@+id/btn_flash"
                android:layout_width="72dp"
                android:layout_height="72dp" />
            <TextView
                android:text="@string/menu6"
                android:layout_marginLeft="40dp"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
