<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/qr_code_header_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="@drawable/shape_corner_up"
        android:orientation="horizontal">
        <Button
            android:id="@+id/delete"
            android:layout_width="@dimen/common_actionbar_back_width"
            android:layout_height="@dimen/common_actionbar_back_height"
            android:layout_marginTop="@dimen/common_actionbar_btn_margintop"
            android:layout_marginLeft="@dimen/common_actionbar_btn_marginleft"
            android:background="@drawable/input_no_style"/>
        <TextView
            android:id="@+id/textoftype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_encode_main"
            android:textColor="@color/compass_actionbar_title_text_color"
            android:textSize="@dimen/common_actionbar_title_text_size" />
        <Button
            android:id="@+id/add"
            android:layout_width="@dimen/common_actionbar_back_width"
            android:layout_height="@dimen/common_actionbar_back_height"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/common_actionbar_btn_margintop"
            android:layout_marginRight="@dimen/common_actionbar_btn_marginleft"
            android:background="@drawable/input_yes_style"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/qr_code_header_bar"
        android:background="@color/colorWhite">
        <TextView
            android:id="@+id/textinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/smsNumViewIntro"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"/>
        <EditText
            android:id="@+id/edit_number"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:textSize="12sp"
            android:textColor="#CFCFCF"
            android:textColorHint="#CFCFCF"
            android:maxLength="18"
            android:phoneNumber="true"
            android:background="@drawable/input_background"
            android:textCursorDrawable="@null"
            android:cursorVisible="true"
            android:hint="@string/inputPhoneNumHint"
            android:layout_below="@id/textinfo"/>

        <LinearLayout
            android:layout_below="@id/edit_number"
            android:orientation="horizontal"
            android:id="@+id/line"
            android:layout_width="330dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="#F0F0F0">
        </LinearLayout>
        <RelativeLayout
            android:layout_below="@id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/smsContentViewIntro"
                android:textColor="@color/black"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="35dp"/>
            <EditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:textSize="12sp"
                android:textColor="#CFCFCF"
                android:textColorHint="#CFCFCF"
                android:maxLength="200"
                android:textStyle="italic"
                android:background="@drawable/input_background"
                android:textCursorDrawable="@null"
                android:cursorVisible="true"
                android:hint="@string/inputSmsContentHint"
                android:layout_below="@id/contents"/>

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>