<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="com.lidong.maxbox.activity.LevelActivity">

    <LinearLayout
        android:id="@+id/Level_menu"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#ff3b9af1">
        <Button
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_global_title_back_normal"
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/levelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/level_title"
            android:textSize="25dp"
            android:layout_marginLeft="85dp"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/levelView"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_gravity="center">
        <ImageButton
            android:id="@+id/zero_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/zero_level_lock_selector"
            android:background="#00FFFFFF"
            android:layout_gravity="right"/>

        <com.lidong.maxbox.views.LevelView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:id="@+id/level_show"
            android:background="@drawable/tools_level_bg_circle_all">
        </com.lidong.maxbox.views.LevelView>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/level_lock_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/level_lock_selector"
            android:background="#00FFFFFF"/>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toLeftOf="@id/level_lock_off"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/tvv_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="Pitch"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="32sp" />
            <TextView
                android:id="@+id/tvl_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvv_vertical"
                android:layout_centerHorizontal="true"
                android:text="@string/vertical"
                android:gravity="center_horizontal"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/level_lock_off"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/tvv_horz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="horiz"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="32sp" />
            <TextView
                android:id="@+id/tvl_horz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvv_horz"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/horizontal"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
